[package]
name = "gametrc"
version = "1.2.0"
description = "GameTrc is a desktop application for tracking and managing your video game library."
authors = ["Hussein Mukhtar hussein@hushm.me"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gametrc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"   # for file picker (cover art / screenshots)
tauri-plugin-opener = "2"   
tauri-plugin-fs     = "2"   # for reading/writing files
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLite — "bundled" compiles SQLite directly into your binary (no system dep needed)
rusqlite   = { version = "0.31", features = ["bundled"] }
chrono     = { version = "0.4", features = ["serde"] }  # date/time handling
dirs       = "5"         # OS-standard data directories
thiserror  = "1"         # ergonomic custom error types
uuid       = { version = "1", features = ["v4"] }        # unique IDs if needed
ureq       = "2"         # simple blocking HTTP client for image downloads

[profile.release]
panic         = "abort"       # smaller binary — no panic unwinding
codegen-units = 1             # slower compile, better optimization
lto           = true          # link-time optimization
opt-level     = "s"           # optimize for size
strip         = true          # strip debug symbols




